# cdek

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .pypirc  LICENSE  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
cdek/: client.py  entities.py
cdek/client/: __init__.py  auth.py  client.py
src/cdek/: __init__.py  client.py  entities.py
src/tests/: conftest.py  test_client.py
tests/: __init__.py  conftest.py  test_auth.py  test_client.py
