[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "tomli>=1.0",
    "packaging>=20.0"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
[tool.isort]
profile = "black"
multi_line_output=3
include_trailing_comma=true
force_grid_wrap=0
use_parentheses=true
line_length=79