[metadata]
name = cdek
author = nek
author_email = nek@srez.org
home_page = https://github.com/nek-v/cdek
description = A library that simplifies the work with the API of the CDEK delivery service.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
platform = any
keywords = cdek, shipment, delivery, api
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: User Interfaces
    Operating System :: OS Independent
    Topic :: Internet

[options]
zip_safe = false
include_package_data = true
python_requires = >= 2.7
package_dir =
    cdek=src/cdek
    tests=src/cdek
packages =
    cdek
test_suite = tests
setup_requires =
	setuptools >=30.3.0
    setuptools-git-versioning
install_requires =
    backports.functools-lru-cache
    requests>=2.22.0,<3
    requests_oauthlib==1.3.0
    boltons>=19.1.0,<20
    oauthlib==3.1.1

[bdist_wheel]
universal = true

[check]
metadata = true
strict = true

[sdist]
formats = gztar